[gd_scene load_steps=16 format=2]

[ext_resource path="res://mainMenu/options/Options.gd" type="Script" id=1]
[ext_resource path="res://mainMenu/QuitGame.gd" type="Script" id=2]
[ext_resource path="res://mainMenu/patchNotes/PatchNotes.gd" type="Script" id=3]
[ext_resource path="res://mainMenu/MainMenuFade.gd" type="Script" id=4]
[ext_resource path="res://mainMenu/play/Play.gd" type="Script" id=5]
[ext_resource path="res://assets/Fonts/Background.png" type="Texture" id=6]
[ext_resource path="res://assets/Fonts/Beholden-Bold.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 28
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Animation" id=7]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_right = -3.0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Play" type="Button" parent="."]
margin_left = 11.981
margin_top = 126.052
margin_right = 65.981
margin_bottom = 166.052
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
text = "Play"
align = 0
script = ExtResource( 5 )
mouse_entered = Color( 0.054902, 0.427451, 0.690196, 1 )
mouse_exited = Color( 1, 1, 1, 1 )

[node name="Options" type="Button" parent="."]
margin_left = 11.0
margin_top = 161.0
margin_right = 109.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
text = "Options"
align = 0
script = ExtResource( 1 )
mouse_entered = Color( 0.054902, 0.427451, 0.690196, 1 )
mouse_exited = Color( 1, 1, 1, 1 )

[node name="PatchNotes" type="Button" parent="."]
margin_left = 12.0
margin_top = 190.0
margin_right = 159.0
margin_bottom = 219.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
text = "Patch Notes"
align = 0
script = ExtResource( 3 )
mouse_entered = Color( 0.054902, 0.427451, 0.690196, 1 )
mouse_exited = Color( 1, 1, 1, 1 )

[node name="QuitGame" type="Button" parent="."]
margin_left = 12.0
margin_top = 219.0
margin_right = 140.0
margin_bottom = 248.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
text = "Quit Game"
align = 0
script = ExtResource( 2 )
mouse_entered = Color( 0.054902, 0.427451, 0.690196, 1 )
mouse_exited = Color( 1, 1, 1, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 3.0
margin_top = 5.0
margin_right = 43.0
margin_bottom = 45.0
rect_scale = Vector2( 15.937, 8.901 )
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeOut = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 320, 181 )
current = true
zoom = Vector2( 0.619, 0.58 )

[connection signal="mouse_entered" from="Play" to="Play" method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="Play" to="Play" method="_on_Play_mouse_exited"]
[connection signal="pressed" from="Play" to="Play" method="_on_Play_pressed"]
[connection signal="mouse_entered" from="Options" to="Options" method="_on_Options_mouse_entered"]
[connection signal="mouse_exited" from="Options" to="Options" method="_on_Options_mouse_exited"]
[connection signal="pressed" from="Options" to="Options" method="_on_Options_pressed"]
[connection signal="mouse_entered" from="PatchNotes" to="PatchNotes" method="_on_PatchNotes_mouse_entered"]
[connection signal="mouse_exited" from="PatchNotes" to="PatchNotes" method="_on_PatchNotes_mouse_exited"]
[connection signal="pressed" from="PatchNotes" to="PatchNotes" method="_on_PatchNotes_pressed"]
[connection signal="mouse_entered" from="QuitGame" to="QuitGame" method="_on_QuitGame_mouse_entered"]
[connection signal="mouse_exited" from="QuitGame" to="QuitGame" method="_on_QuitGame_mouse_exited"]
[connection signal="pressed" from="QuitGame" to="QuitGame" method="_on_QuitGame_pressed"]
